# aklpy

./: README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
scripts/: scraper.py  typipe.py
src/akl/: collections.py  workflow.py
tests/: test_collections.py  test_workflow.py
