[project]
name = "akl"
version = "2025.3.4"
description = "akl personal python code"
readme = "README.md"
authors = [{ name = "Abizer Lokhandwala", email = "abizer@abizer.me" }]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.10.6", "typeid-python>=0.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "rich>=13.9.4",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.bumpver]
current_version = "2025.3.4"
version_pattern = "YYYY.MM.INC0"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
